syntax = "proto3";

package einride.avro.example.v1;

option go_package = "go.einride.tech/protobuf-avro/internal/examples/proto/gen/einride/avro/example/v1;examplev1";

message ExampleEnum {
  Enum enum_value = 1;

  enum Enum {
    ENUM_UNSPECIFIED = 0;
    ENUM_VALUE1 = 1;
    ENUM_VALUE2 = 2;
  }
}
